FlightPath Changelog
====================

2012-03-13
  


2012-03-12
  Got switching between Year view and Type view working.

  Got What If working (I think).  Its a little bit screwy, and sometimes it seems to break when
  it wants to, but it seems to be OK for the time being.

  
2012-03-11
  Got many of the popups working on the "View" page.  Also, submitting a basic advising session works.
  
  Moved over all of the Javascript into its own file (advise.js) instead of being locked up inside the
  AdvisingScreen object.  It could be further split out into other files as well.
  
  Adding/Removing Substitutions, and removing courses from a degree plan, appear to be working
  correctly.
  
  Menus can specify a file to load as needed.  Like an additional .inc file where that page_callback is located.

  Admin toolbox and hide/show pie charts
  
  Got rid of XML in FlightPath.  Now, we just serialize or nothing.  No sense in the extra overhead.  Still need to get rid of it
  for module.info files.  Some are still .xml.  Will get to that when I do the Admin work. 
  

2012-03-10
  Continuing work on making FP more like Drupal.
  
  Created "modules" table to better keep track of modules.
  
  Created student_search module.  Working on bringing in all of its functionality.
  
  Added jquery 1.7.1 instead of 1.3.2.
  
  Added much of the Advise module
  
  Have a new concept of passing around the "current_student_id" from page to page,
  and saving all other "advising variables" to a table, rather than keeping them in the POST
  between every page.  This makes it much more tidy.
  

2012-03-09
  ** BIG CHANGE **
  I ran a script to convert from camelCase to underscore_style.
  Now, only Class names are CamelCased.  Everything else-- variables and methods and functions,
  are all going to be underscore_style (also called K&R or C++ style).
  Even though I think this isn't as pretty, it is consistent, which is what I am more
  concerned about.
  