@@ -1,0 +1,49 @@
+/* Styles for the comments module */
+
+#comments-comment-textarea {
+  width: 100%;
+  height: 100px;
+}
+
+.comments-visible-input-row {
+  font-size: 0.8em;
+}
+
+.comments-copy-paste-help {
+  font-size: 0.7em;
+}
+
+.comments-comment-buttons {
+  text-align: right;
+  padding-top: 5px;
+}
+
+
+.comment-comment {
+  margin-bottom: 40px;
+  font-size: 0.9em;
+}
+
+.comment-comment .comment-by-line {
+  float: left;  
+}
+
+.comment-comment-public .comment-by-line {
+  background-color: #FFFFE0; 
+}
+
+.comment-comment .comment-datetime {
+  text-align: right;
+}
+
+.comment-comment .comment-text {
+  border: 1px solid #aaa;
+  padding: 10px;
+  background-color: #F8F8FF;
+}
+
+.comment-comment .comment-delete {
+  text-align: right;
+  margin-top: 5px;
+  font-size: 0.8em;
+}
